load("//tools:ng.bzl", "ng_project")

package(default_visibility = ["//:__subpackages__"])

ng_project(
    name = "start",
    srcs = glob([
        "*.ts",
        "*.html",
    ]),
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/forms",
        "//:node_modules/@angular/router",
        "//:node_modules/@types/node",
        "//:node_modules/detect-browser",
        "//src/app/start/cli",
        "//src/app/start/custom",
        "//src/app/start/godot",
        "//src/app/start/tutorials",
        "//src/app/start/unity",
        "//src/app/start/unreal",
        "//src/components/code-block-variation",
        "//src/components/layout/content",
        "//src/components/layout/sidenav",
        "//src/components/layout/sidenav-section",
    ],
)
