load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:angular_ts_project.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "tutorials_component_style",
    src = "tutorials.component.scss",
)

ng_ts_project(
    name = "tutorials",
    srcs = glob(["*.ts"]),
    angular_assets = [
        "tutorials.component.html",
        ":tutorials_component_style",
    ],
    deps = [
        "//src/app/tutorials/sys-impl/emsdk-cpp",
        "//src/app/tutorials/unity/basic-example",
        "//src/app/tutorials/unity/moving-block",
        "//src/components/layout/content",
        "//src/components/layout/sidenav",
        "//src/components/layout/sidenav-section",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
