load("//tools:angular_ts_project.bzl", "ng_ts_project")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    src = "code-block-variation.component.scss",
)

ng_ts_project(
    name = "code-block-variation",
    srcs = [
        "code-block-variation.component.ts",
        "code-block-variation.module.ts",
        "code-block-variation-option.directive.ts",
    ],
    angular_assets = [
        "code-block-variation.component.html",
        ":styles",
    ],
    deps = [
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
