load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["code-block-variation.component.scss"],
)

ng_project(
    name = "code-block-variation",
    srcs = [
        "code-block-variation.component.ts",
        "code-block-variation.module.ts",
        "code-block-variation-option.directive.ts",
    ],
    deps = [
        "//:node_modules/@angular/cdk",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
