load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["doxygen-block.component.scss"],
)

ng_project(
    name = "doxygen-block",
    srcs = [
        "doxygen-block.component.ts",
        "doxygen-block.module.ts",
        "doxygen-block.component.html",
        "doxygen-block.component.css",
    ],
    deps = [
        "//src/search:doxygen-def-types",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
