load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["doxygen-block.component.scss"],
)

ng_project(
    name = "doxygen-block",
    srcs = [
        "doxygen-block.component.css",
        "doxygen-block.component.html",
        "doxygen-block.component.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//src/search:doxygen-def-types",
    ],
)
