load("//tools:angular_ts_project.bzl", "ng_ts_project")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    src = "doxygen-compound-block.component.scss",
)

ng_ts_project(
    name = "doxygen-compound-block",
    srcs = [
        "doxygen-compound-block.component.ts",
        "doxygen-compound-block.module.ts",
    ],
    angular_assets = [
        "doxygen-compound-block.component.html",
        ":styles",
    ],
    deps = [
        "//src/components/doxygen-block",
        "//src/components/doxygen-paragraph",
        "//src/search:doxygen-def-types",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
