load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["doxygen-datatype-def.component.scss"],
)

ng_project(
    name = "doxygen-datatype-def",
    srcs = [
        "doxygen-datatype-def.component.ts",
        "doxygen-datatype-def.module.ts",
    ],
    deps = [
        "//src/components/doxygen-child-block",
        "//src/components/doxygen-function-def",
        "//src/components/doxygen-functions-table",
        "//src/components/doxygen-member-components/doxygen-description",
        "//src/components/doxygen-member-components/doxygen-location",
        "//src/components/doxygen-member-components/doxygen-name",
        "//src/components/doxygen-parent-block",
        "//src/components/doxygen-refid-link",
        "//src/components/doxygen-type-name",
        "//src/components/doxygen-typedef-def",
        "//src/components/doxygen-types-table",
        "//src/components/doxygen-variable-def",
        "//src/components/doxygen-variables-table",
        "//src/search:doxygen-def-types",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
