load("//tools:angular_ts_project.bzl", "ng_ts_project")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    src = "doxygen-define-def.component.scss",
)

ng_ts_project(
    name = "doxygen-define-def",
    srcs = [
        "doxygen-define-def.component.ts",
        "doxygen-define-def.module.ts",
    ],
    angular_assets = [
        "doxygen-define-def.component.html",
        ":styles",
    ],
    deps = [
        "//src/components/doxygen-member-block",
        "//src/components/doxygen-member-components/doxygen-description",
        "//src/components/doxygen-member-components/doxygen-location",
        "//src/search:doxygen-def-types",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
