load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["doxygen-define-def.component.scss"],
)

ng_project(
    name = "doxygen-define-def",
    srcs = [
        "doxygen-define-def.component.css",
        "doxygen-define-def.component.html",
        "doxygen-define-def.component.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//src/components/doxygen-member-components/doxygen-description",
        "//src/components/doxygen-member-components/doxygen-location",
        "//src/search:doxygen-def-types",
    ],
)
