load("//tools:angular_ts_project.bzl", "ng_ts_project")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    src = "doxygen-dir-def.component.scss",
)

ng_ts_project(
    name = "doxygen-dir-def",
    srcs = [
        "doxygen-dir-def.component.ts",
        "doxygen-dir-def.module.ts",
    ],
    angular_assets = [
        "doxygen-dir-def.component.html",
        ":styles",
    ],
    deps = [
        "//src/components/doxygen-compound-block",
        "//src/components/doxygen-member-components/doxygen-description",
        "//src/components/doxygen-member-components/doxygen-location",
        "//src/components/doxygen-member-components/doxygen-name",
        "//src/search:doxygen-def-types",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
