load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["doxygen-dir-def.component.scss"],
)

ng_project(
    name = "doxygen-dir-def",
    srcs = [
        "doxygen-dir-def.component.css",
        "doxygen-dir-def.component.html",
        "doxygen-dir-def.component.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//src/components/doxygen-member-components/doxygen-description",
        "//src/components/doxygen-member-components/doxygen-location",
        "//src/components/doxygen-parent-block",
        "//src/components/doxygen-refid-link",
        "//src/search:doxygen-def-types",
    ],
)
