load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["doxygen-enum-def.component.scss"],
)

ng_project(
    name = "doxygen-enum-def",
    srcs = [
        "doxygen-enum-def.component.css",
        "doxygen-enum-def.component.html",
        "doxygen-enum-def.component.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//src/components/doxygen-member-components/doxygen-description",
        "//src/components/doxygen-member-components/doxygen-location",
        "//src/components/doxygen-member-components/doxygen-name",
        "//src/components/doxygen-member-components/doxygen-parameters",
        "//src/search:doxygen-def-types",
    ],
)
