load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["doxygen-enumvalue-def.component.scss"],
)

ng_project(
    name = "doxygen-enumvalue-def",
    srcs = [
        "doxygen-enumvalue-def.component.ts",
        "doxygen-enumvalue-def.module.ts",
    ],
    deps = [
        "//src/components/doxygen-paragraph",
        "//src/search:doxygen-def-types",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
