load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//src:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["doxygen-enumvalue-def.component.scss"],
)

ng_project(
    name = "doxygen-enumvalue-def",
    srcs = [
        "doxygen-enumvalue-def.component.css",
        "doxygen-enumvalue-def.component.html",
        "doxygen-enumvalue-def.component.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//src/components/doxygen-paragraph",
        "//src/search:doxygen-def-types",
    ],
)
